--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -4,33 +4,33 @@
 
 <h3> Basic Usage </h3>
   <code>
-    &lt;ng2-fa name="spinner"&gt;&lt;/ng2-fa&gt;
+    &lt;fa name="spinner"&gt;&lt;/fa&gt;
   </code>
   <div>
     Renders:
-    <ng2-fa name="spinner"></ng2-fa>
+    <fa name="spinner"></fa>
   </div>
 <hr />
   <code>
-    &lt;ng2-fa name="spinner" animation="spin"&gt;&lt;/ng2-fa&gt;
+    &lt;fa name="spinner" animation="spin"&gt;&lt;/fa&gt;
   </code>
   <div>
     Renders:
-    <ng2-fa name="spinner" animation="spin"></ng2-fa>
+    <fa name="spinner" animation="spin"></fa>
   </div>
 <hr />
   <code>
-    &lt;ng2-fa name="spinner" animation="pulse"&gt;&lt;/ng2-fa&gt;
+    &lt;fa name="spinner" animation="pulse"&gt;&lt;/fa&gt;
   </code>
   <div>
     Renders:
-    <ng2-fa name="spinner" animation="pulse"></ng2-fa>
+    <fa name="spinner" animation="pulse"></fa>
   </div>
 <hr />
   <code>
-    &lt;ng2-fa name="spinner" animation="spin" size="3x"&gt;&lt;/ng2-fa&gt;
+    &lt;fa name="spinner" animation="spin" size="3x"&gt;&lt;/fa&gt;
   </code>
   <div>
     Renders:
-    <ng2-fa name="spinner" animation="spin" size="3x"></ng2-fa>
+    <fa name="spinner" animation="spin" size="3x"></fa>
   </div>
